--- a/myTinder/www/partials/trashed.html
+++ b/myTinder/www/partials/trashed.html
@@ -27,20 +27,13 @@
             <button class="button icon ion-navicon" menu-toggle="left"></button>
             <div class="h1 title" ng-click="home()">My Tinder</div>
         </ion-header-bar>
-        <td-cards>
+        <ion-content>
+            <ul class="list">
+                <li class="item" ng-repeat="user in trashedUsers">
+                    {{user}}
+                </li>
+            </ul>
+        </ion-content>
 
-            <td-card id="td-card" ng-repeat="card in cards" on-destroy="cardDestroyed($index)"
-                     on-swipe-left="cardSwipedLeft($index,card.id)" on-swipe-right="cardSwipedRight($index,card.id)"
-                     on-partial-swipe="cardPartialSwipe(amt)">
-                    <div class="title">
-                        {{card.username}}
-                    </div>
-                    <div class="image">
-                        <div class="no-text overlayBox"><div class="noBox boxed">Trash</div></div>
-                        <img ng-src="{{card.path}}">
-                        <div class="yes-text overlayBox"><div class="yesBox boxed" id="centerMe">Save</div></div>
-                    </div>
-            </td-card>
-        </td-cards>
     </ion-side-menu-content>
 </ion-side-menus>
