--- a/myTinder/www/partials/saved.html
+++ b/myTinder/www/partials/saved.html
@@ -7,7 +7,7 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item>
+                <ion-item ng-click="profile()">
                     My profile
                 </ion-item>
                 <ion-item ng-click="trashed()">
